主色调从蓝色修改为绿色

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,7 +64,7 @@ body {
     }
     margin-bottom: 15px;
     border: 0px;
-    color: $blueText;
+    color: $redText;
     z-index: 1030;
   }
 
@@ -75,18 +75,18 @@ body {
     font-weight: bold;
     margin-left: 0 !important;
     border-bottom: 0px;
-    b { color: $blue; }
+    b { color: $green; }
   }
   .navbar-default .navbar-brand,
   .navbar-default .navbar-nav>li>a  { color: #333; border-bottom: 3px solid #FFF; padding-bottom: 12px; }
   .navbar-default .navbar-nav>li>a:active { background-color: $grayDark; border-bottom-color: #999; }
   .navbar-inverse .navbar-nav .open .dropdown-menu .divider { color: #999 !important; }
-  .navbar-inverse .navbar-nav .open .dropdown-menu li.active a { border-bottom: 0px; color: $blue; }
+  .navbar-inverse .navbar-nav .open .dropdown-menu li.active a { border-bottom: 0px; color: $green; }
   .navbar-inverse .navbar-toggle { color: #333; padding: 3px 9px; font-size: 18px; border:1px solid rgba(255,255,255,0.1); background-color: rgba(255,255,255,0.05); }
   .navbar-inverse .navbar-toggle:focus { background-color: rgba(255,255,255,0.05);}
   .navbar-inverse .navbar-toggle:hover { background-color: rgba(255,255,255,0.1); }
   .navbar-inverse .navbar-collapse,
-  .navbar-inverse .navbar-form { border-color: $blueText; }
+  .navbar-inverse .navbar-form { border-color: $greenText; }
   .navbar-inverse .navbar-nav>.open>a,
   .navbar-inverse .navbar-nav>.open>a:focus,
   .navbar-inverse .navbar-nav>.open>a:hover { background: $grayDark; color: #333; }
@@ -97,7 +97,7 @@ body {
   .navbar-nav {
     li.active a,
     li.active a:focus,
-    li.active a:hover { color: $blue; background: transparent; }
+    li.active a:hover { color: $green; background: transparent; }
   }
 
   #main-nav-menu {
@@ -107,7 +107,7 @@ body {
       li a:hover,
       li.active a,
       li.active a:focus,
-      li.active a:hover { border-bottom:3px solid $blue; color: $blue; background: transparent; padding-bottom: 12px;}
+      li.active a:hover { border-bottom:3px solid $green; color: $green; background: transparent; padding-bottom: 12px;}
     }
   }
 
