--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -186,7 +186,7 @@ table.node-topics {
       a { display:block; text-decoration: none; }
       a.counter {
         font-size: 32px; color: $blue;
-        &:hover { color: $blueLight; }
+        &:hover { color: $greenLight; }
       }
       a.text {
         color: #999;
