--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -19,7 +19,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.submit "找回密码", class: "btn btn-lg btn-primary", 'data-disable-with' => t("common.submitting") %>
+          <%= f.submit "找回密码", class: "btn btn-lg btn-success", 'data-disable-with' => t("common.submitting") %>
         </div>
         <% end %>
       </div>
