--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -11,7 +11,7 @@
           <%= f.input :email, hint: '' %>
 
           <div class="form-group">
-            <%= f.submit "重新发送解锁邮件", class: 'btn btn-primary' %>
+            <%= f.submit "重新发送解锁邮件", class: 'btn btn-success' %>
           </div>
         <% end %>
       </div>
