--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -57,7 +57,7 @@
           <%= f.input :tagline %>
         <% end %>
         <div class="form-actions hide-ios">
-          <button type="submit" class="btn btn-lg btn-primary" data-disable-with="<%= t("common.saving") %>"><%= t("users.update_profile")%></button>
+          <button type="submit" class="btn btn-lg btn-success" data-disable-with="<%= t("common.saving") %>"><%= t("users.update_profile")%></button>
         </div>
         <% end %>
       </div>
