--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="form-actions hide-ios">
-          <button type="submit" class="btn btn-lg btn-primary" data-disable-with="<%= t("common.saving") %>"><%= t("users.update_profile")%></button>
+          <button type="submit" class="btn btn-lg btn-success" data-disable-with="<%= t("common.saving") %>"><%= t("users.update_profile")%></button>
         </div>
         <% end %>
       </div>
