--- a/app/views/topics/_ban.html.erb
+++ b/app/views/topics/_ban.html.erb
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">确定</button>
+        <button type="submit" class="btn btn-success">确定</button>
         <a class="btn btn-default" data-dismiss="modal">取消</a>
       </div>
       <% end %>
