--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -29,7 +29,7 @@
   <% end %>
 
   <div class="form-group hide-ios">
-    <%= f.submit t("common.save"), class: "btn btn-primary col-xs-2", 'data-disable-with' => t("common.saving"), 'data-tb' => "save-topic" %>
+    <%= f.submit t("common.save"), class: "btn btn-success col-xs-2", 'data-disable-with' => t("common.saving"), 'data-tb' => "save-topic" %>
 
     <div class="pull-right hide-ios"><a href="/markdown" target="_blank"><i class="fa fa-tip"></i> 排版说明</a></div>
   </div>
