--- a/app/views/replies/edit.html.erb
+++ b/app/views/replies/edit.html.erb
@@ -12,7 +12,7 @@
         <%= f.text_area :body, class: "topic-editor form-control", rows: 10 %>
       </div>
       <div class="form-group">
-        <%= f.submit t("common.save"), class: "btn btn-primary col-xs-2 hide-ios", 'data-disable-with' => t("common.saving") %>
+        <%= f.submit t("common.save"), class: "btn btn-success col-xs-2 hide-ios", 'data-disable-with' => t("common.saving") %>
         <% if can? :destroy, @reply %>
         <%= link_to "删除",[@topic,@reply], class: "pull-right btn btn-danger", method: :delete, data: { confirm: "确定要删除此回复么？" } %>
         <% end %>
