fixed theme color

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -185,7 +185,7 @@ table.node-topics {
       text-align: center; margin-top: 15px; padding-top: 15px;
       a { display:block; text-decoration: none; }
       a.counter {
-        font-size: 32px; color: $blue;
+        font-size: 32px; color: $green;
         &:hover { color: $greenLight; }
       }
       a.text {
