--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -7,6 +7,9 @@
 
 <div class="row">
   <div class="col-md-9">
+    <div>
+      <img src="http://7b1gwu.com1.z0.glb.clouddn.com/3541514908213_.pic_hd.jpg" alt="" style="width: 100%">
+    </div>
     <div class="topics topics-<%= action_name %> panel panel-default">
 
       <div class="panel-body item-list">
